sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:12: error: value =< is not a member of Int
    while((compteur=<i)||(!plusPetitQue(i-compteur,v)))
                   ^